src/objects/JWS_PlanInputLargeClassification__c.object
<CustomObject>
    <fields>
        <fullName>AwardsPastPerformance__c</fullName>
        <label>AwardsPastPerformance</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardsPlanValue__c</fullName>
        <label>AwardsPlanValue</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardsRatiovalue__c</fullName>
        <label>AwardsRatiovalue</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardsSamePeriodValue__c</fullName>
        <label>AwardsSamePeriodValue</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CampaignRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>企画申請</label>
        <referenceTo>JWS_CampaignRequest__c</referenceTo>
        <relationshipLabel>計画入力大分類</relationshipLabel>
        <relationshipName>CampaignRequest_PILC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstituentRatio1__c</fullName>
        <label>構成比1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstituentRatio2__c</fullName>
        <label>構成比2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstituentRatio3__c</fullName>
        <label>構成比3</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicPastPerformance__c</fullName>
        <label>DiseaseClinicPastPerformance</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicPlannedValueOneThousandYen__c</fullName>
        <label>DiseaseClinicPlannedValueOneThousandYen</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicRatioOfPlan__c</fullName>
        <label>DiseaseClinicRatioOfPlan</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseClinicSamePeriodConversion__c</fullName>
        <label>DiseaseClinicSamePeriodConversion</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedAllowanceAmount__c</fullName>
        <label>ExpectedAllowanceAmount</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemNO__c</fullName>
        <label>ItemNO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassificationCD__c</fullName>
        <label>大分類コード</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassificationNO__c</fullName>
        <label>大分類NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeClassification__c</fullName>
        <label>大分類</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleClassificationNO__c</fullName>
        <label>MiddleClassificationNO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastPerformancePeriodFrom__c</fullName>
        <label>過去実績期間From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PastPerformancePeriodTo__c</fullName>
        <label>過去実績期間To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PastPerformancePeriod__c</fullName>
        <label>過去実績期間</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PastPerformance__c</fullName>
        <label>PastPerformance</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyPastPerformance__c</fullName>
        <label>PharmacyPastPerformance</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyPlannedValue__c</fullName>
        <label>PharmacyPlannedValue</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacyRatioOfPlan__c</fullName>
        <label>PharmacyRatioOfPlan</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PharmacySamePeriodConversion__c</fullName>
        <label>PharmacySamePeriodConversion</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannedValue1OneThousandYen__c</fullName>
        <label>PlannedValue1OneThousandYen</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannedValue2OneThousandYen__c</fullName>
        <label>PlannedValue2OneThousandYen</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannedValue3OneThousandYen__c</fullName>
        <label>PlannedValue3OneThousandYen</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RatioOfPlan__c</fullName>
        <label>RatioOfPlan</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SamePeriodConversion__c</fullName>
        <label>SamePeriodConversion</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPeriodPlannedValue__c</fullName>
        <label>TotalPeriodPlannedValue</label>
        <precision>12</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpRate__c</fullName>
        <label>Up率(対同月数換算)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VersusPlannedValue__c</fullName>
        <label>VersusPlannedValue</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>JWS_PlanInputLargeClassification</label>
    <listViews>
        <fullName>lien</fullName>
        <columns>CampaignRequest__c</columns>
        <columns>NAME</columns>
        <columns>DiseaseClinicPlannedValueOneThousandYen__c</columns>
        <columns>PharmacyPlannedValue__c</columns>
        <columns>PlannedValue1OneThousandYen__c</columns>
        <columns>PlannedValue2OneThousandYen__c</columns>
        <columns>PlannedValue3OneThousandYen__c</columns>
        <columns>PlannedValueOneThousandYen__c</columns>
        <columns>TotalPeriodPlannedValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>lien</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>JWSPILC-{0000}</displayFormat>
        <label>対象大分類No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JWS_PlanInputLargeClassification</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>